--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-vue": "^7.0.0",
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
-    "jest-junit": "^13.1.0"
+    "jest-junit": "^13.1.0",
+    "tailwindcss": "3.4.3"
   },
   "eslintConfig": {
     "root": true,
