--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "dayjs": "1.11.11",
     "json-fake-server": "^0.0.2",
+    "nanoid": "5.0.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.15"
   },
